[package]
name = "rstpr"
version = "0.1.0"
authors = ["fronox <serjzv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
tokio = {version="0.2.16", features=["full"]}#features = ["macros", "tcp", "dns", "io-util", "rt-core"]}
tokio-executor = "0.1.10"
futures = "0.3.4"
threadpool = "1.7.1"
rayon = "1.3.0"